--- a/public/styleCreate.css
+++ b/public/styleCreate.css
@@ -53,4 +53,16 @@ button:hover {
 #backButton{
     margin-top: 15px;
     background-color: red;
+    width: 340px;
+    transition: background-color 0.3s;
+}
+
+#backButton:hover{
+    background-color: rgb(175, 0, 0);
+}
+
+.retorno{
+    font-size: 20px;
+    display: flex;
+    flex-direction: column;
 }
