--- a/public/styleIndex.css
+++ b/public/styleIndex.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: 'Verdana', sans-serif;
     background-color: #282c35;
     margin: 0;
     padding: 0;
