--- a/public/stylePerfil.css
+++ b/public/stylePerfil.css
@@ -1,11 +1,34 @@
-body {
-    font-family: 'Arial', sans-serif;
+body{
+    font-family: 'Verdana', sans-serif;
     background-color: #282c35;
-    color: #fff;
     margin: 0;
     padding: 0;
     display: flex;
+    color: #fff;
     align-items: center;
     justify-content: center;
     height: 100vh;
+}
+
+.perfil{
+    width: 300px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+button{
+    padding: 15px 30px;
+    margin: 10px;
+    font-size: 18px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    background-color: #4CAF50;
+    color: #fff;
+    transition: background-color 0.3s;
+}
+
+button:hover{
+    background-color: #45a049;
 }
